test/tests/compiler/6_statements_and_conditional_expressions/valid/extra_credit/compound_if_expression.plx
pub fn main(none) i32 {
    a: i32 = 0
    if a += 1 {
        return a
    }
    return 10
}
