test/tests/compiler/6_statements_and_conditional_expressions/invalid_semantics/extra_credit/goto_missing_label.plx
pub fn main(none) i32 {
    jump lbl
    return 0
}
